fixed the overflow

--- a/Taki-Learn/src/App.css
+++ b/Taki-Learn/src/App.css
@@ -350,7 +350,7 @@ header button:hover {
   position: fixed;
   top: 0;
   left: 0;
-
+overflow: hidden;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
@@ -361,10 +361,11 @@ header button:hover {
 .modal-content1 {
   width: 50%;
   z-index: 10;
-  height: auto;
+  height: 100vh;
   padding: 55px;
   position: fixed;
   top: 40px;
+  overflow:auto;
   left: 25%;
   text-align: center;
   background-color: white;
@@ -384,7 +385,7 @@ header button:hover {
 .modal-content1 input {
   width: 80%;
   margin: 30px 0 20px 0;
-  height: 40px;
+  height: 30px;
   border-top: none;
   border-left: none;
   border-right: none;
